Fix project list overflow formatting

--- a/src/js/components/Base/ProjectButton.sass
+++ b/src/js/components/Base/ProjectButton.sass
@@ -18,7 +18,7 @@
   margin-bottom: 10px
   background-color: $white
   color: $black
-  font-size: 12px
+  font-size: 14px
 
   cursor: pointer
   text-decoration: none
